<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="#F7F7F7">

    <!-- Profile Option -->
    <LinearLayout
        android:id="@+id/profile_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_person_24"
            app:tint="@color/green"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#333333" />
    </LinearLayout>

    <!-- Share Option -->
    <LinearLayout
        android:id="@+id/share_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_share_24"
            app:tint="@color/green"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#333333" />
    </LinearLayout>

    <!-- Language Option -->
    <LinearLayout
        android:id="@+id/language_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_language_24"
            app:tint="@color/green"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#333333" />
    </LinearLayout>

    <!-- Layout Option -->
    <LinearLayout
        android:id="@+id/layout_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_logout_24"
            app:tint="@color/green"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lagout"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#333333" />
    </LinearLayout>

</LinearLayout>
